// Apply plugins required for project
plugins {
	// Add java library
    id 'java-library'
    // Add eclipse project
    id 'eclipse'
}

// Update plugin info
base {
	group = "com.minecrafttas.tasbattle"
	archivesName = "gameserver"
	version = "1.0.0-SNAPSHOT"
}

// Compile with UTF-8
compileJava.options.encoding = 'UTF-8'

// Compile for java 20
java {
	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_20
}

// Add repositories required for project
repositories {
	// Add maven central for lombok
	mavenCentral()
	// Add papermc repository for api
    maven { url "https://papermc.io/repo/repository/maven-public/" }
}

// Add paper api
dependencies {
	// Add lombok processor
	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'
	// Add paper mc api for compile time
    compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
}

// Configure source sets
sourceSets.main.java.srcDirs += ['src/ffa/java', 'src/bedwars/java']

// Upload plugin to server [login via key]
tasks.register('upload', Exec) {
	workingDir "${buildDir}/libs"
	commandLine "cmd.exe /k echo put ${base.archivesName.get()}-${version}.jar | sftp -oPort=13524 pancake@mgnet.work".split(" ")
}

// Copy plugin to preview server
tasks.register('copyPlugin', Exec) {
	workingDir "${buildDir}/libs"
	commandLine "ssh -p 13524 pancake@mgnet.work echo ${pancake_password} | sudo -S -u root cp /home/pancake/${base.archivesName.get()}-${version}.jar /home/tasbattle/preview/default/plugins/${base.archivesName.get()}-${version}.jar".split(" ")
}

// Restart preview server
tasks.register('restartServer', Exec) {
	workingDir "${buildDir}/libs"
	commandLine "ssh -p 13524 pancake@mgnet.work echo ${pancake_password} | sudo -S -u tasbattle screen -XS gameserver01preview quit".split(" ")
}

upload.dependsOn = ['build']
upload.finalizedBy(copyPlugin)
copyPlugin.finalizedBy(restartServer)
upload.group = 'tasbattle'
